--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   flutter_bloc: ^8.1.2
   go_router: ^14.3.0
   get_it: ^7.2.0
+  intl: ^0.19.0
+  intl_utils: ^2.8.10
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +37,8 @@ flutter:
 
 flutter_intl:
   enabled: true
+  arb_dir: lib/l10n
+  template_arbs:
+    - lib/l10n/intl_en.arb
+    - lib/l10n/intl_es.arb
+  output_dir: lib/l10n/generated
