--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   get_it: ^7.2.0
   intl: ^0.19.0
   intl_utils: ^2.8.10
+  google_fonts: ^6.2.1
+  
   flutter_localizations:
     sdk: flutter
 
