--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.19.0
   intl_utils: ^2.8.10
   google_fonts: ^6.2.1
+  keyboard_actions: ^4.2.0
   
   flutter_localizations:
     sdk: flutter
